2007-10-18  Albert Chu  <chu11@llnl.gov>

	* src/libs/modules/config_module_default.c: Removed file.

	* src/libs/modules/config_module.h,
	src/libs/modules/config_module.c (config_module_found): New
	function.

	* src/libs/util/config_util.c (_load_config_module): Do not load a
	config module if one is not found.

	* src/libs/modules/config_module.c (config_module_load): Do not
	use a default config module.

	* src/libs/modules/clusterlist_module_default.c: Removed file.

	* src/libs/modules/clusterlist_module.h,
	src/libs/modules/clusterlist_module.c (clusterlist_module_found):
	New function.

	* src/cerebrod/cerebrod_listener.c: Adjust for non-default
	clusterlist module not being loaded.

	* src/libs/cerebro/cerebro_clusterlist_util.h,
	src/libs/cerebro/cerebro_clusterlist_util.c: Remove files.

	* src/libs/cerebro/: Adjust for removal of clusterlist utility
	files which were unneeded.

	* src/libs/cerebro/Makefile.am, src/libs/modules/Makefile.am:
	Adjust for removed files.

	* src/cerebro-stat/cerebro-stat.c (_metric_value_str): Fix assert
	corner case bug.

	* man/cerebro_module.3.in: Tweak based on changes.

	* man/cerebro.conf.5.in: Add note on shortened hostnames for
	forwarding config.

	* src/libs/include/cerebro/cerebro_config.h,
	src/libs/util/config_util.c, src/cerebrod/cerebrod_config.c,
	src/cerebrod/cerebrod_config.h, src/cerebrod/cerebrod_speaker.c:
	Support cerebrod_alternate_hostname debug option.

	* src/cerebrod/cerebrod_event_node_timeout_monitor.c
	(cerebrod_event_node_timeout_monitor): Fix segfault corner case.

	* man/cerebro.conf.5.in: Document new cerebrod_alternate_hostname
	debug option.
	
2007-10-17  Albert Chu  <chu11@llnl.gov>

        * DISCLAIMER.UC: New file.

        * DISCALIMER: Updated with new disclaimer.

        * Makefile.am, cerebro.spec.in: Add DISCLAIMER.UC.

	* Fixed copyright and FSF address globally.
	
2007-10-16  Albert Chu  <chu11@llnl.gov>

	* Fix typos in Copyright headers globally.
